Fix dashboard/bootstrap style issues.
* Align 3 column and full width dashboard widgets with consistent
  margins. Except for the bottom margin, not sure what is blowing it out.
* Load admin styles after bootstrap again, so we don't override admin
  styles accidentally.
* Only load bootstrap on dashboard page. Even loading admin styles after
  bootstrap looks strange on other pages.
* Align 3 "partitions" in full width app list properly with the 3 column
  widgets above.
* Add top margin to each app name in the full width app list, to better
  group the app name with the model links.
* Properly align footer IC logo with header and body.

--- a/icekit/dashboard/static/admin/css/icekit_dashboard.less
+++ b/icekit/dashboard/static/admin/css/icekit_dashboard.less
@@ -12,7 +12,7 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: @footer-height;
+  padding-bottom: @footer-height;
 }
 
 #container {
@@ -30,7 +30,7 @@ footer {
 
 .dashboard #content {
 	width: 100%;
-	padding: 20px 40px;
+	padding: 15px 25px;
 	box-sizing: border-box;
 }
 
@@ -44,10 +44,9 @@ footer {
 
 .widget {
     .cf;
-    box-sizing: border-box;
     background-color: #f8f8f8;
     padding: 10px 10px 5px 10px;
-    margin-bottom: 15px;
+    margin: 15px 0;
     min-height: 260px;
     overflow: hidden;
     border-radius: 3px 3px 0 0;
@@ -207,30 +206,37 @@ footer {
         }
     }
 
-    &.is-full-width { width: 95%; }
+    &.widget-other {
+        padding: 0;
+
+        > header {
+            margin: 0;
+            margin-bottom: 10px;
+        }
+    }
 
     .other-contents-list {
-        padding: 0 20px 0 0;
-        margin: 0 ;
-        box-sizing: border-box;
-        float: left;
-        &:last-child {
-            padding-right: 0;
-        }
+        padding: 0;
+        width: 100%;
 
         > li {
             .cf;
             list-style-type: none;
             position: relative;
-            padding: 0; margin: 0;
+            padding: 0 8px;
+            margin: 0;
 
             &.mini.caps {
                 border-bottom: 0px;
+                padding-top: 15px;
                 a {
                     color: #aaa;
                 }
                 &:hover {
                     background: transparent;
+                }
+                &:first-child {
+                    padding-top: 0;
                 }
             }
 
@@ -459,6 +465,7 @@ fieldset.collapse {
 
 footer {
 	.cf;
+    box-sizing: border-box;
     width: 100%;
 	color: #aaa;
 	background: #333;
@@ -476,7 +483,6 @@ footer {
 		}
 	}
 	.footer-section {
-		width: 50%;
 		line-height: @footer-height;
 		position: relative;
 		box-sizing: border-box;
@@ -488,7 +494,6 @@ footer {
 	.footer-right {
 		float: right;
 		text-align: right;
-		padding-right: 65px;
 	}
 }
 
@@ -501,15 +506,13 @@ footer {
 	color: #aaa !important;
 }
 
-
 #ic-logo {
-	display: block;
-	position: absolute;
-	top: 0;
-	right: 0;
-	margin-right: 45px;
-	width: 45px;
-	height: 45px;
+	display: inline-block;
+	position: relative;
+	float: right;
+	margin-left: 10px;
+	width: 50px;
+	height: 50px;
 	overflow: hidden;
 	border-bottom: 0 !important;
 	border-radius: 2px;
